(Fix) Participate: Add missing padding-top to page

--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -8,4 +8,7 @@ $m: 'page';
 		background-color: $color-gray-light-blueish;
 		padding-top: 70px;
 	}
+	&--participate {
+		padding-top: 70px;
+	}
 }
